# gene_pcp

./: .gitignore  .python-version  NOTICE  README.md  configuration.yaml  configuration_freq.py  configuration_freq.yaml  configuration_mlp.yaml  configuration_transformer.yaml  dataset_generation.py  experiment.yaml  freq_configuration.yaml  mlp_pipeline.py  open_bsub_shell.sh  protein_coding_potential.py  protein_coding_potential_freq.py  protein_coding_potential_mlp.py  protein_coding_potential_transformer.py  pyproject.toml  submit_LSF_job.py  utils.py
notebooks/: README.md  dataset.py
