[tool.poetry]
name = "gene_pcp"
version = "0.1.0"
description = ""
authors = ["William Stark <william@ebi.ac.uk>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
biopython = "^1.79"
loguru = "^0.5.3"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
