[tool.poetry]
name = "gene_pcp"
version = "0.1.0"
description = ""
authors = ["William Stark <william@ebi.ac.uk>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
biopython = "^1.79"
pandas = "^1.3.4"
torch = "^1.10.0"
torchmetrics = "^0.6.0"
PyYAML = "^6.0"
tensorboard = "^2.7.0"
pytorch-lightning = "^1.5.7"

[tool.poetry.dev-dependencies]
pudb = "^2021.2.2"
jupyterlab = "^3.2.2"
jupytext = "^1.13.1"
matplotlib = "^3.4.3"

[tool.isort]
profile = "black"
multi_line_output = 3
lines_after_imports = 2
lines_between_types = 1

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
